--- a/src/com/milkyway/GUI/NhanVienJPanel.form
+++ b/src/com/milkyway/GUI/NhanVienJPanel.form
@@ -479,7 +479,7 @@
                               <Color blue="99" green="ff" red="99" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="3" name="/com/milkyway/Icons/Create.png"/>
+                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Create.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="Th&#xea;m"/>
                           </Properties>
@@ -490,7 +490,7 @@
                               <Color blue="66" green="ff" red="ff" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="3" name="/com/milkyway/Icons/Edit.png"/>
+                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Edit.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="C&#x1ead;p nh&#x1ead;t"/>
                           </Properties>
@@ -501,7 +501,7 @@
                               <Color blue="cc" green="cc" red="cc" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="3" name="/com/milkyway/Icons/Document.png"/>
+                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Document.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="M&#x1edb;i"/>
                           </Properties>
@@ -512,7 +512,7 @@
                               <Color blue="ff" green="ff" red="99" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="3" name="/com/milkyway/Icons/Save.png"/>
+                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Save.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="C&#x1ead;p nh&#x1ead;t tr&#x1ea1;ng th&#xe1;i"/>
                           </Properties>
@@ -523,7 +523,7 @@
                               <Color blue="ff" green="66" red="ff" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="3" name="/com/milkyway/Icons/Camera.png"/>
+                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Camera.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="Ch&#x1ee5;p &#x1ea3;nh"/>
                           </Properties>
